# Angela

./: .cargo.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  gentree.sh  repomix-output.xml  rust-toolchain.toml
.github/workflows/: ci.yml
Architecture/: Structure.md  TREE.md
crates/angelax-common/src/: error.rs
crates/angelax-core/src/: lib.rs
crates/angelax-core/src/huffman_decoder_optimized/: lut_generator.rs  tables.rs
crates/angelax-core/src/server/: connection.rs  http1.rs  http2.rs  http3.rs  mod.rs  tls.rs
crates/angelax-core/src/utils/: atomic.rs  mod.rs  pool.rs  simd.rs
crates/angelax-testing/tests/: angelax-lut-generator.tests.rs
docs/api-reference/: BUILD.md
examples/SIMD/: https_parser_demo.rs
website/: tsconfig.json  vite.config.ts
website/src/: App.tsx
